add download and vuetify

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "vitepress": "^1.6.3"
+    "vitepress": "^1.6.3",
+    "@mdi/font": "^7.4.47",
+    "vite-plugin-vuetify": "^2.1.0",
+    "vuetify": "^3.7.18"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1"
