--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "wkt": "^0.1.1"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.1"
+    "@supabase/supabase-js": "^2.49.1",
+    "timeago.js": "^4.0.0-beta.3"
   }
 }
