--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.1",
+    "ag-grid-vue3": "^33.3.2",
     "timeago.js": "^4.0.0-beta.3"
   }
 }
