--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "wkt": "^0.1.1"
   },
   "dependencies": {
+    "@powersync/vue": "^0.2.4",
+    "@powersync/web": "^1.23.0",
     "@supabase/supabase-js": "^2.49.1",
     "ag-grid-vue3": "^33.3.2",
-    "timeago.js": "^4.0.0-beta.3"
+    "timeago.js": "^4.0.0-beta.3",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1"
   }
 }
