--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@powersync/web": "^1.23.0",
     "@supabase/supabase-js": "^2.49.1",
     "ag-grid-vue3": "^33.3.2",
+    "geojson": "^0.5.0",
+    "maplibre-gl": "^5.6.1",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
