--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@powersync/vue": "^0.2.4",
     "@powersync/web": "^1.23.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@vimeo/player": "^2.29.3",
     "ag-grid-vue3": "^33.3.2",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
