--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "wkt": "^0.1.1"
   },
   "dependencies": {
+    "@handsontable/vue3": "^16.0.1",
     "@powersync/vue": "^0.2.4",
     "@powersync/web": "^1.23.0",
     "@supabase/supabase-js": "^2.49.1",
     "@vimeo/player": "^2.29.3",
     "ag-grid-vue3": "^33.3.2",
+    "handsontable": "^16.0.1",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
