--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@supabase/supabase-js": "^2.49.1",
     "@vimeo/player": "^2.29.3",
     "ag-grid-vue3": "^33.3.2",
+    "ajv": "^8.17.1",
     "handsontable": "^16.0.1",
+    "maplibre-gl": "^5.7.1",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
