--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "echarts": "^6.0.0",
     "handsontable": "^16.0.1",
     "maplibre-gl": "^5.7.1",
+    "pinia": "^3.0.3",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-wasm": "^3.4.1"
