--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@powersync/vue": "^0.2.4",
     "@powersync/web": "^1.23.0",
     "@supabase/supabase-js": "^2.49.1",
+    "@turf/turf": "^7.3.0",
     "@vimeo/player": "^2.29.3",
     "ag-grid-vue3": "^33.3.2",
     "ajv": "^8.17.1",
@@ -33,6 +34,7 @@
     "echarts": "^6.0.0",
     "handsontable": "^16.0.1",
     "maplibre-gl": "^5.7.1",
+    "maplibre-gl-draw": "^1.6.9",
     "pinia": "^3.0.3",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
