--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "pinia": "^3.0.3",
     "timeago.js": "^4.0.0-beta.3",
     "vite-plugin-top-level-await": "^1.5.0",
-    "vite-plugin-wasm": "^3.4.1"
+    "vite-plugin-wasm": "^3.4.1",
+    "vue-router": "^4.6.3"
   }
 }
